@@ -2,6 +2,13 @@ Changelog for plone.i18n
 
     (name of developer listed in brackets)
 
+plone.i18n - 1.0b2 Unreleased
+
+    - Remove more punctuation characters as for example using a comma in the
+      title results in a not so friendly ID. This closes
+      http://dev.plone.org/plone/ticket/6585.
+      [hannosch]
+
 plone.i18n - 1.0b1 Released March 5, 2007
 
     - Initial implementation.
